--- a/Informe/bibliografia.bib
+++ b/Informe/bibliografia.bib
@@ -27,6 +27,29 @@
   url       = {https://doi.org/10.1109/icme.2002.1035731},
 }
 
+@InProceedings{kurth2006cyclic,
+  author    = {Kurth, Frank and Gehrmann, Thorsten and M{\"u}ller, Meinard},
+  title     = {The Cyclic Beat Spectrum: Tempo-Related Audio Features for Time-Scale Invariant Audio Identification.},
+  booktitle = {ISMIR},
+  year      = {2006},
+  pages     = {35--40},
+}
+
+@InProceedings{alonso2004tempo,
+  author    = {Alonso, Miguel A and Richard, Ga{\"e}l and David, Bertrand},
+  title     = {Tempo And Beat Estimation Of Musical Signals.},
+  booktitle = {ISMIR},
+  year      = {2004},
+}
+
+@InProceedings{goto1997issues,
+  author    = {Goto, Masataka and Muraoka, Yoichi},
+  title     = {Issues in evaluating beat tracking systems},
+  booktitle = {Working Notes of the IJCAI-97 Workshop on Issues in AI and Music-Evaluation and Assessment},
+  year      = {1997},
+  pages     = {9--16},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 ,
