--- a/Informe/bibliografia.bib
+++ b/Informe/bibliografia.bib
@@ -50,6 +50,11 @@
   pages     = {9--16},
 }
 
+@Article{stft,
+  title = {librosa.core.stft Documentation},
+  url   = {http://librosa.github.io/librosa/generated/librosa.core.stft.html?highlight=stft#librosa.core.stft},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 ,
