referencia de wikipedia

--- a/Informe/bibliografia.bib
+++ b/Informe/bibliografia.bib
@@ -42,6 +42,13 @@
   year      = {2004},
 }
 
+@misc{ wiki:crest,
+   author = "Wikipedia",
+   title = "Crest factor --- Wikipedia{,} The Free Encyclopedia",
+   year = "2017",
+   url = "https://en.wikipedia.org/w/index.php?title=Crest_factor&oldid=786681961",
+   }
+
 @InProceedings{goto1997issues,
   author    = {Goto, Masataka and Muraoka, Yoichi},
   title     = {Issues in evaluating beat tracking systems},
